src/test/ui/nll/issue-58299.stderr
error: lifetime may not live long enough
  --> $DIR/issue-58299.rs:16:9
   |
LL | fn foo<'a>(x: i32) {
   |        -- lifetime `'a` defined here
...
LL |         A::<'a>::X..=A::<'static>::X => (),
   |         ^^^^^^^^^^ requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/issue-58299.rs:24:27
   |
LL | fn bar<'a>(x: i32) {
   |        -- lifetime `'a` defined here
...
LL |         A::<'static>::X..=A::<'a>::X => (),
   |                           ^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

